# research-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: pyproject.toml
{{cookiecutter.repo_name}}/docs/: README.md
