[project]
name = "{{ cookiecutter.package_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
authors = [
    { name = "WesleyCh3n", email = "wesley.ch3n.0530@gmail.com" }
]
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
